# duneana

./: .gitignore  CMakeLists.txt  README.md
duneana/: CMakeLists.txt
duneana/AnaTree/: AnalysisTree.fcl  AnalysisTree_module.cc  CMakeLists.txt
duneana/CAFMaker/: CAFMaker.fcl  CAFMaker_module.cc  CMakeLists.txt
duneana/DAQSimAna/: CMakeLists.txt  CalibrationTreeBuilder.h  CalibrationTreeBuilder_module.cc  DAQQuickClustering_module.cc  PackedDump_module.cc  TriggerPrimitiveFinderPass1.h  TriggerPrimitiveFinderPass1_tool.cc  TriggerPrimitiveFinderPass2_tool.cc  TriggerPrimitiveFinderTemplate_tool.cc  TriggerPrimitiveFinder_module.cc
duneana/DAQSimAna/AbsRunningSumHitFinder/: AbsRSAlgParts.h  AbsRunningSum.fcl  AbsRunningSumTPFinderPass1.h  AbsRunningSumTPFinderPass1_tool.cc  AbsRunningSumTPFinderTool.h  AbsRunningSumTPFinder_module.cc  CMakeLists.txt
duneana/DAQSimAna/RunningSumHitFinder/: CMakeLists.txt  RunningSumTPFinderPass1.h  RunningSumTPFinderPass1_tool.cc  RunningSumTPFinderPass2.h  RunningSumTPFinderPass2_tool.cc  RunningSumTPFinderPass3.h  RunningSumTPFinderPass3_tool.cc  RunningSumTPFinderPass4.h  RunningSumTPFinderPass4_tool.cc  RunningSumTPFinder_module.cc
duneana/DAQSimAna/SNAnaClustering/: CMakeLists.txt  SNAna_module.cc  addnoise_AbsRunSum_snanas.fcl
duneana/DAQSimAna/absRunningSumHitFinder/: CMakeLists.txt  absRSAlgParts.h  absRunningSum.fcl  absRunningSumTPFinderPass1.h  absRunningSumTPFinderPass1_tool.cc  absRunningSumTPFinderPass2_tool.cc  absRunningSumTPFinderTool.h  absRunningSumTPFinder_module.cc
duneana/EnergyStudies/: CMakeLists.txt  EMEnergyCalib_module.cc  EMPi0Energy_module.cc
duneana/EventDisplay3D/: CMakeLists.txt  EnsureTApplication.cc  EnsureTApplication.h  EventDisplay3D_module.cc  EvtDisplayService.h  EvtDisplayService_service.cc  EvtDisplayUtils.cc  EvtDisplayUtils.h  NavState.cc  NavState.h  Style.cc  Style.h  classes.h  classes_def.xml
duneana/EventFilters/: CMakeLists.txt  DuneEventFilter_module.cc
duneana/HitAnalysis/: CMakeLists.txt  GoodWireAna_module.cc  HitAnaPDSP_module.cc  SignalToNoise_module.cc
duneana/PandoraAnalysis/: CMakeLists.txt  PandoraAnalysis_module.cc
duneana/ProductFilters/: CMakeLists.txt
duneana/ShowerAna/: CMakeLists.txt
duneana/SolarNuAna/: CMakeLists.txt  SolarNuAna_module.cc
duneana/SolarNuAna/fcl/: SolarNuAna.fcl  legacy_solar_ana_dune10kt_1x2x6.fcl  solar_ana_dune10kt_1x2x6.fcl  solar_ana_dune10kt_1x2x6_legacy.fcl  solar_ana_dune10kt_1x2x6_mcc11.fcl  solar_ana_dunevd10kt_1x8x14_3view_30deg.fcl  solar_ana_dunevd10kt_1x8x6_3view_30deg.fcl  solarnuana_hd_v2_wbkg_job.fcl  solarnuana_hd_v4_apa_job.fcl  solarnuana_hd_v4_ar39_job.fcl  solarnuana_hd_v4_ar42_job.fcl  solarnuana_hd_v4_clean_job.fcl  solarnuana_hd_v4_cpa_job.fcl  solarnuana_hd_v4_kr85_job.fcl  solarnuana_hd_v4_neut_job.fcl  solarnuana_hd_v4_po210_job.fcl  solarnuana_hd_v4_rn222_job.fcl  solarnuana_hd_v4_wbkg_job.fcl  solarnuana_vd_v0_CPAK40_job.fcl  solarnuana_vd_v0_CPAK42-Ar42_job.fcl  solarnuana_vd_v0_CPAU238_job.fcl  solarnuana_vd_v0_Clean_job.fcl  solarnuana_vd_v0_Gamma_job.fcl  solarnuana_vd_v0_LArAr39_job.fcl  solarnuana_vd_v0_LArAr42_job.fcl  solarnuana_vd_v0_LArK42-Ar42_job.fcl  solarnuana_vd_v0_LArKr85_job.fcl  solarnuana_vd_v0_LArRn222_job.fcl  solarnuana_vd_v0_Neutron_job.fcl  solarnuana_vd_v0_PDSRn222_job.fcl  solarnuana_vd_v0_Wbkg_job.fcl
duneana/SupernovaAna/: CMakeLists.txt  MakeSNeTProfileHistos_module.cc  SupernovaAna_module.cc
duneana/TrackingAna/: CMakeLists.txt  NeutronDecayN2Ana_module.cc  NucleonDecayFilter_module.cc  ProtonIdentification_module.cc  TrackingEfficiency_module.cc
duneana/TriggerSim/: CMakeLists.txt  TPAlgTPCExample.hh  TPAlgTPCExample_tool.cc  TriggerActivityMakerTPC_module.cc  TriggerPrimitiveMakerTPC_module.cc
duneana/TriggerSim/TAAlgTools/: TAAlgTPCExample.hh  TAAlgTPCExample_tool.cc
duneana/TriggerSim/TPAlgTools/: TPAlgTPCExample.hh  TPAlgTPCExample_tool.cc  TPAlgTPCTool.hh
duneana/WireClusterAnalysis/: CMakeLists.txt  WireAna.fcl  WireAna_Utils.h  WireAna_module.cc  WireAna_module.h  c2numpy.h  wireana_job.fcl
ups/: product_deps
