add_subdirectory(AnaTree)
add_subdirectory(CAFMaker)
add_subdirectory(DAQSimAna)
add_subdirectory(EnergyStudies)
add_subdirectory(EventFilters)
add_subdirectory(HitAnalysis)
add_subdirectory(PandoraAnalysis)
add_subdirectory(ProductFilters)
add_subdirectory(ShowerAna)
add_subdirectory(SolarNuAna)
add_subdirectory(SupernovaAna)
add_subdirectory(TrackingAna)