add_subdirectory(fcl)
art_make(BASENAME_ONLY
         MODULE_LIBRARIES
         dunecore::DAQTriggerSim_TriggerDataProducts
         larcore::Geometry_Geometry_service
         lardata::DetectorInfoServices_DetectorClocksServiceStandard_service
         larcorealg::Geometry
         lardataobj::RawData
         nusimdata::SimulationBase
         larsim::MCCheater_BackTrackerService_service
         larsim::MCCheater_PhotonBackTrackerService_service
         larsim::MCCheater_ParticleInventoryService_service
         nug4::ParticleNavigation
         ART_FRAMEWORK_CORE
         ART_FRAMEWORK_PRINCIPAL
         ART_FRAMEWORK_SERVICES_REGISTRY
         ART_ROOT_IO_TFILE_SUPPORT
         ROOT::Core
         ART_ROOT_IO_TFILESERVICE_SERVICE
         art::Persistency_Common
         art::Persistency_Provenance
         art::Utilities 
	 canvas
         ART_PERSISTENCY_COMMON
         ART_PERSISTENCY_PROVENANCE
         ART_UTILITIES
         messagefacility::MF_MessageLogger
         cetlib::cetlib 
	 cetlib_except
         ROOT_BASIC_LIB_LIST
         )

install_fhicl()
install_headers()
install_source()
